@@ -153,8 +153,9 @@ def registerViewImpl(
         raise ValueError("Class can be used for view only once.")
 
     cdict = {'__name__': name,
-             'layoutname': layout,
-             'template': template}
+             'layoutname': layout}
+    if template is not None:
+        cdict['template'] = template
 
     if context is None:
         context = interface.Interface
